# CppProjects

./: README.md
MuyagaBJ/: CMakeLists.txt  README.md  grammer.md  grammer.mlg
MuyagaBJ/documents/: hello.mbj
MuyagaBJ/include/: lexer.hpp  token.hpp
MuyagaBJ/src/: lexer.cpp  main.cpp
MuyagaOS/: CMakeLists.txt  README.md  init_muyagaOS.sh  instruction_set.md
MuyagaOS/os/: CMakeLists.txt
MuyagaOS/scripts/: build_all.sh  make_disk.sh  run_vm.sh
MuyagaOS/vm/: CMakeLists.txt
grep-clone/: CMakeLists.txt  README.md
grep-clone/include/regex/: dfa.hpp  matcher.hpp  nfa.hpp  parser.hpp  utils.hpp
grep-clone/src/: a.out  dfa.cpp  main.cpp  matcher.cpp  nfa.cpp  parser.cpp  utils.cpp
